streamlit state transition tricks done!!!!

--- a/osmnx_routing/optimized_route_osmnx_tests.ipynb
+++ b/osmnx_routing/optimized_route_osmnx_tests.ipynb
@@ -540,6 +540,15 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tenb_edges2.to_file('sample_routing.geojson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -547,7 +556,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +625,7 @@
        "9765548281"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +645,7 @@
        "9765548634"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,126 +665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9765548281,\n",
-       " 9765548280,\n",
-       " 9765548279,\n",
-       " 9765548278,\n",
-       " 9765548277,\n",
-       " 9765548276,\n",
-       " 9765548274,\n",
-       " 9765548307,\n",
-       " 9765548306,\n",
-       " 9765548305,\n",
-       " 9765548303,\n",
-       " 9765548302,\n",
-       " 9765548304,\n",
-       " 9765548319,\n",
-       " 9765548318,\n",
-       " 9765548317,\n",
-       " 9765548316,\n",
-       " 9765548309,\n",
-       " 9765548308,\n",
-       " 9765548315,\n",
-       " 9765548314,\n",
-       " 9765548313,\n",
-       " 9765548312,\n",
-       " 9765548311,\n",
-       " 9765548310,\n",
-       " 9765548299,\n",
-       " 9765548298,\n",
-       " 9765548297,\n",
-       " 9765548296,\n",
-       " 9765548295,\n",
-       " 9765548294,\n",
-       " 9765548293,\n",
-       " 9765548863,\n",
-       " 9765548864,\n",
-       " 9765548865,\n",
-       " 9765548866,\n",
-       " 9765548867,\n",
-       " 9765548517,\n",
-       " 9765548518,\n",
-       " 9765548514,\n",
-       " 9765548515,\n",
-       " 9765548516,\n",
-       " 9765548507,\n",
-       " 9765548508,\n",
-       " 9765548859,\n",
-       " 9765548509,\n",
-       " 9765548510,\n",
-       " 9765548529,\n",
-       " 9765548531,\n",
-       " 9765548532,\n",
-       " 9765548533,\n",
-       " 9765548534,\n",
-       " 9765548535,\n",
-       " 9765548536,\n",
-       " 9765548537,\n",
-       " 9765548538,\n",
-       " 9765548829,\n",
-       " 9765548539,\n",
-       " 9765548838,\n",
-       " 9765548519,\n",
-       " 9765548520,\n",
-       " 9765548521,\n",
-       " 9765548522,\n",
-       " 9765548523,\n",
-       " 9765548524,\n",
-       " 9765548525,\n",
-       " 9765548526,\n",
-       " 9765548527,\n",
-       " 9765548528,\n",
-       " 9765548541,\n",
-       " 9765548542,\n",
-       " 9765548774,\n",
-       " 9765548775,\n",
-       " 9765548776,\n",
-       " 9765548777,\n",
-       " 9765548778,\n",
-       " 9765548382,\n",
-       " 9765548383,\n",
-       " 9765548384,\n",
-       " 9765548385,\n",
-       " 9765548402,\n",
-       " 9765548403,\n",
-       " 9765548404,\n",
-       " 9765548405,\n",
-       " 9765548406,\n",
-       " 9765548407,\n",
-       " 9765548408,\n",
-       " 9798547891,\n",
-       " 9765548409,\n",
-       " 9765548411,\n",
-       " 9765548412,\n",
-       " 9765548395,\n",
-       " 9765548844,\n",
-       " 9765548845,\n",
-       " 9765548846,\n",
-       " 9765548847,\n",
-       " 9765548848,\n",
-       " 9765548754,\n",
-       " 9765548753,\n",
-       " 9765548752,\n",
-       " 9765548751,\n",
-       " 9765548727,\n",
-       " 9765548876,\n",
-       " 9765548875,\n",
-       " 9765548874,\n",
-       " 9765548873,\n",
-       " 9765548629,\n",
-       " 9765548630,\n",
-       " 9765548631,\n",
-       " 9765548633,\n",
-       " 9765548634]"
+       "[9765548281]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
