streamlit app still buggy, but "working"

--- a/osmnx_routing/optimized_route_osmnx_tests.ipynb
+++ b/osmnx_routing/optimized_route_osmnx_tests.ipynb
@@ -505,7 +505,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tenb_edges2['beta_wh_weight'] = (tenb_edges2['length']/(tenb_edges2['final_score']+1)) * (1.0 + tenb_edges2['corrected_grade'])"
+    "tenb_edges2['beta_wh_weight'] = (tenb_edges2['length']/(tenb_edges2['final_score']+1)) * (1.0 + tenb_edges2['corrected_grade'])\n",
+    "\n",
+    "# no negative weights\n",
+    "tenb_edges2['beta_wh_weight'] += (min(tenb_edges2['beta_wh_weight'])+0.0001)"
    ]
   },
   {
@@ -516,15 +519,7 @@
     {
      "data": {
       "text/plain": [
-       "count    1602.000000\n",
-       "mean        0.112662\n",
-       "std         0.624825\n",
-       "min        -0.000285\n",
-       "25%         0.010298\n",
-       "50%         0.014949\n",
-       "75%         0.128578\n",
-       "max        19.597872\n",
-       "Name: beta_wh_weight, dtype: float64"
+       "21"
       ]
      },
      "execution_count": 33,
@@ -533,12 +528,43 @@
     }
    ],
    "source": [
-    "tenb_edges2['beta_wh_weight'].fillna(0).describe()"
+    "round(max(tenb_edges2['beta_wh_weight']))+1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1602.000000\n",
+       "mean        0.112476\n",
+       "std         0.624825\n",
+       "min        -0.000471\n",
+       "25%         0.010112\n",
+       "50%         0.014764\n",
+       "75%         0.128392\n",
+       "max        19.597687\n",
+       "Name: beta_wh_weight, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# setting any nan to the max computed weight plus one\n",
+    "tenb_edges2['beta_wh_weight'] = tenb_edges2['beta_wh_weight'].fillna(round(max(tenb_edges2['beta_wh_weight']))+1)\n",
+    "\n",
+    "tenb_edges2['beta_wh_weight'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +582,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -579,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +651,7 @@
        "9765548281"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +671,7 @@
        "9765548634"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,16 +691,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polyline  = [(G_final.nodes[node_id]['y'],G_final.nodes[node_id]['x']) for node_id in shortest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9765548281]"
+       "[(-25.4608659, -49.2642521),\n",
+       " (-25.4608593, -49.2642546),\n",
+       " (-25.4608524, -49.2642559),\n",
+       " (-25.4608454, -49.2642561),\n",
+       " (-25.4608384, -49.264255),\n",
+       " (-25.4608317, -49.2642528),\n",
+       " (-25.4608251, -49.2642493),\n",
+       " (-25.4608196, -49.2642451),\n",
+       " (-25.4608145, -49.2642398),\n",
+       " (-25.4608131, -49.2642377),\n",
+       " (-25.4608102, -49.2642337),\n",
+       " (-25.4608068, -49.2642269),\n",
+       " (-25.4607207, -49.2640167),\n",
+       " (-25.4606799, -49.263917),\n",
+       " (-25.460638, -49.2638148),\n",
+       " (-25.4605952, -49.2637104),\n",
+       " (-25.4605547, -49.2636114),\n",
+       " (-25.4605153, -49.2635154),\n",
+       " (-25.4604748, -49.2634166),\n",
+       " (-25.4603941, -49.2632195),\n",
+       " (-25.4603755, -49.2631743),\n",
+       " (-25.4603731, -49.2631669),\n",
+       " (-25.4603718, -49.2631593),\n",
+       " (-25.4603716, -49.2631516),\n",
+       " (-25.4603724, -49.2631442),\n",
+       " (-25.4603724, -49.2631438),\n",
+       " (-25.4603744, -49.2631364),\n",
+       " (-25.4603774, -49.2631293),\n",
+       " (-25.4603813, -49.2631229),\n",
+       " (-25.4603861, -49.2631172),\n",
+       " (-25.4603917, -49.2631124),\n",
+       " (-25.4603978, -49.2631086),\n",
+       " (-25.4604046, -49.2631043),\n",
+       " (-25.4603894, -49.2630723),\n",
+       " (-25.46038, -49.2630525),\n",
+       " (-25.4603617, -49.263014),\n",
+       " (-25.4603557, -49.2630014),\n",
+       " (-25.4604833, -49.2629368),\n",
+       " (-25.4605759, -49.2628899),\n",
+       " (-25.4606681, -49.2628432),\n",
+       " (-25.4607584, -49.2627974),\n",
+       " (-25.4608486, -49.2627517),\n",
+       " (-25.4609413, -49.2627048),\n",
+       " (-25.4611291, -49.2626097),\n",
+       " (-25.4611341, -49.2626071),\n",
+       " (-25.4611363, -49.262606),\n",
+       " (-25.4611424, -49.2626023),\n",
+       " (-25.4611477, -49.2625977),\n",
+       " (-25.4611526, -49.262592),\n",
+       " (-25.4611565, -49.2625857),\n",
+       " (-25.4611595, -49.2625788),\n",
+       " (-25.4611615, -49.2625715),\n",
+       " (-25.4611625, -49.2625639),\n",
+       " (-25.4611624, -49.2625563),\n",
+       " (-25.4611612, -49.2625487),\n",
+       " (-25.461159, -49.2625415),\n",
+       " (-25.4611583, -49.2625396),\n",
+       " (-25.4610383, -49.2622268),\n",
+       " (-25.4609668, -49.2620403),\n",
+       " (-25.46096, -49.2620227),\n",
+       " (-25.4609567, -49.2620157),\n",
+       " (-25.4609525, -49.2620094),\n",
+       " (-25.4609474, -49.2620039),\n",
+       " (-25.4609415, -49.2619993),\n",
+       " (-25.4609351, -49.2619958),\n",
+       " (-25.4609283, -49.2619935),\n",
+       " (-25.4609212, -49.2619924),\n",
+       " (-25.460914, -49.2619926),\n",
+       " (-25.460907, -49.2619939),\n",
+       " (-25.4609066, -49.2619941),\n",
+       " (-25.4609002, -49.2619965),\n",
+       " (-25.4608872, -49.2620029),\n",
+       " (-25.4608808, -49.2619884),\n",
+       " (-25.4608613, -49.2619374),\n",
+       " (-25.4608439, -49.2618949),\n",
+       " (-25.4608368, -49.2618751),\n",
+       " (-25.4608631, -49.2618594),\n",
+       " (-25.4608694, -49.2618556),\n",
+       " (-25.4608752, -49.2618507),\n",
+       " (-25.4608801, -49.2618449),\n",
+       " (-25.4608827, -49.2618407),\n",
+       " (-25.4608842, -49.2618383),\n",
+       " (-25.4608872, -49.2618311),\n",
+       " (-25.4608892, -49.2618234),\n",
+       " (-25.46089, -49.2618155),\n",
+       " (-25.4608896, -49.2618075),\n",
+       " (-25.4608881, -49.2617997),\n",
+       " (-25.4608861, -49.261795),\n",
+       " (-25.4608678, -49.2617512),\n",
+       " (-25.4607859, -49.261565),\n",
+       " (-25.4607339, -49.2614463),\n",
+       " (-25.4606218, -49.2611904),\n",
+       " (-25.4605469, -49.2610194),\n",
+       " (-25.4605733, -49.2610053),\n",
+       " (-25.4605964, -49.2609952),\n",
+       " (-25.4606385, -49.2609767),\n",
+       " (-25.460649, -49.260972),\n",
+       " (-25.4606485, -49.260963),\n",
+       " (-25.4606494, -49.2609549),\n",
+       " (-25.4606515, -49.2609471),\n",
+       " (-25.4606534, -49.2609427),\n",
+       " (-25.4606547, -49.2609398),\n",
+       " (-25.4606474, -49.2609218),\n",
+       " (-25.4606249, -49.2608616),\n",
+       " (-25.4606132, -49.2608309),\n",
+       " (-25.4606021, -49.2608018),\n",
+       " (-25.4606087, -49.2608018),\n",
+       " (-25.4606157, -49.2608007),\n",
+       " (-25.4606224, -49.2607983),\n",
+       " (-25.4607858, -49.2607249),\n",
+       " (-25.4609662, -49.260644)]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "polyline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9765548281,\n",
+       " 9765548280,\n",
+       " 9765548279,\n",
+       " 9765548278,\n",
+       " 9765548277,\n",
+       " 9765548276,\n",
+       " 9765548274,\n",
+       " 9765548307,\n",
+       " 9765548306,\n",
+       " 9765548305,\n",
+       " 9765548303,\n",
+       " 9765548302,\n",
+       " 9765548304,\n",
+       " 9765548319,\n",
+       " 9765548318,\n",
+       " 9765548317,\n",
+       " 9765548316,\n",
+       " 9765548309,\n",
+       " 9765548308,\n",
+       " 9765548315,\n",
+       " 9765548314,\n",
+       " 9765548313,\n",
+       " 9765548312,\n",
+       " 9765548311,\n",
+       " 9765548310,\n",
+       " 9765548299,\n",
+       " 9765548298,\n",
+       " 9765548297,\n",
+       " 9765548296,\n",
+       " 9765548295,\n",
+       " 9765548294,\n",
+       " 9765548293,\n",
+       " 9765548863,\n",
+       " 9765548864,\n",
+       " 9765548865,\n",
+       " 9765548866,\n",
+       " 9765548867,\n",
+       " 9765548517,\n",
+       " 9765548518,\n",
+       " 9765548514,\n",
+       " 9765548515,\n",
+       " 9765548516,\n",
+       " 9765548507,\n",
+       " 9765548508,\n",
+       " 9765548859,\n",
+       " 9765548509,\n",
+       " 9765548510,\n",
+       " 9765548529,\n",
+       " 9765548531,\n",
+       " 9765548532,\n",
+       " 9765548533,\n",
+       " 9765548534,\n",
+       " 9765548535,\n",
+       " 9765548536,\n",
+       " 9765548537,\n",
+       " 9765548538,\n",
+       " 9765548829,\n",
+       " 9765548539,\n",
+       " 9765548838,\n",
+       " 9765548519,\n",
+       " 9765548520,\n",
+       " 9765548521,\n",
+       " 9765548522,\n",
+       " 9765548523,\n",
+       " 9765548524,\n",
+       " 9765548525,\n",
+       " 9765548526,\n",
+       " 9765548527,\n",
+       " 9765548528,\n",
+       " 9765548541,\n",
+       " 9765548542,\n",
+       " 9765548774,\n",
+       " 9765548775,\n",
+       " 9765548776,\n",
+       " 9765548777,\n",
+       " 9765548778,\n",
+       " 9765548382,\n",
+       " 9765548383,\n",
+       " 9765548384,\n",
+       " 9765548385,\n",
+       " 9765548402,\n",
+       " 9765548403,\n",
+       " 9765548404,\n",
+       " 9765548405,\n",
+       " 9765548406,\n",
+       " 9765548407,\n",
+       " 9765548408,\n",
+       " 9798547891,\n",
+       " 9765548409,\n",
+       " 9765548411,\n",
+       " 9765548412,\n",
+       " 9765548395,\n",
+       " 9765548844,\n",
+       " 9765548845,\n",
+       " 9765548846,\n",
+       " 9765548847,\n",
+       " 9765548848,\n",
+       " 9765548754,\n",
+       " 9765548753,\n",
+       " 9765548752,\n",
+       " 9765548751,\n",
+       " 9765548727,\n",
+       " 9765548876,\n",
+       " 9765548875,\n",
+       " 9765548874,\n",
+       " 9765548873,\n",
+       " 9765548629,\n",
+       " 9765548630,\n",
+       " 9765548631,\n",
+       " 9765548633,\n",
+       " 9765548634]"
+      ]
+     },
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
