quality check almost done!

--- a/quality_check/data_check.ipynb
+++ b/quality_check/data_check.ipynb
@@ -9,7 +9,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "import geopandas as gpd\n",
-    "from functions import *"
+    "from functions import *\n",
+    "from constants import *"
    ]
   },
   {
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +124,31 @@
     "\n",
     "dump_json(unique_values_dict,'unique_tag_values.json')\n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating valid tag valies dict \n",
+    "\n",
+    "valid_tag_values = {}\n",
+    "\n",
+    "for category in fields_values_properties:\n",
+    "    valid_tag_values[category] = {}\n",
+    "    for osmkey in fields_values_properties[category]:\n",
+    "        # excluding musthave keys that are real numbers, the rules must be applied in another fashion\n",
+    "        if osmkey not in ('width','incline','incline:across'):\n",
+    "            valid_tag_values[category][osmkey] = []\n",
+    "\n",
+    "            for valid_value in fields_values_properties[category][osmkey]:\n",
+    "                if valid_value not in ('?'):\n",
+    "                    valid_tag_values[category][osmkey].append(valid_value)\n",
+    "\n",
+    "\n",
+    "dump_json(valid_tag_values,'valid_tag_values.json')"
    ]
   }
  ],
